--- a/scss/byway-styles/_typography.scss
+++ b/scss/byway-styles/_typography.scss
@@ -1,1 +1,14 @@
 @use "variables" as *;
+.container-wrap {
+  a {
+    color: $steelblue;
+    &:hover {
+      color: $mangotango;
+    }
+  }
+  .byway-website-property {
+    &:hover {
+      color: white;
+    }
+  }
+}
